# galicia-dbt-poc

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/actions/setup-poetry/: action.yml
.github/workflows/: build.yml
config/spark/: log4j.properties
dbt/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/conf/: log4j2.properties
dbt/macros/: calculate_growth_rate.sql  cross_db_utils.sql  generate_date_series.sql  get_currency_symbol.sql  standardize_phone_number.sql  test_allowed_values_list.sql  test_column_length_between.sql  test_column_match_pattern.sql  test_value_in_range.sql  utils.sql  validate_email.sql
dbt/models/: schema.yml
dbt/models/marts/: dim_products.sql  dim_users.sql  fact_daily_sales.sql  fact_monthly_sales.sql  fact_orders.sql
dbt/models/staging/: stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_users.sql
dbt/seeds/: country_codes.csv  order_items.csv  orders.csv  product_categories.csv  products.csv  users.csv
dbt/snapshots/: snap_products.sql
dbt/tests/unit/: stg_orders.yml  stg_users.yml
docker/: Dockerfile.spark  init.sql
