[tool.poetry]
name = "ecommerce-dbt-demo"
version = "1.0.0"
description = "Demo de dbt con arquitectura medallion para e-commerce"
authors = ["ITBA <demo@itba.edu.ar>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "^1.8.0"
dbt-postgres = "^1.8.0"
dbt-spark = {extras = ["session"], version = "^1.8.0"}
psycopg2-binary = "^2.9.9"
pyspark = "^3.5.0"
pandas = "^2.0.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"
sqlfluff = "^3.5.0"
sqlfluff-templater-dbt = "^3.5.0"
ruff = "^0.14.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["ecommerce_demo"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ecommerce_demo --cov-report=html --cov-report=term-missing"
